lts-finder/cache/ChangeLog-4.9.314.txt
commit ef618f4f03931f6b8930bc60b55efe1b30f09ceb
Author: Greg Kroah-Hartman <gregkh@linuxfoundation.org>
Date:   Sun May 15 19:39:17 2022 +0200

    Linux 4.9.314
    
    Link: https://lore.kernel.org/r/20220513142225.909697091@linuxfoundation.org
    Tested-by: Jon Hunter <jonathanh@nvidia.com>
    Tested-by: Pavel Machek (CIP) <pavel@denx.de>
    Tested-by: Shuah Khan <skhan@linuxfoundation.org>
    Tested-by: Florian Fainelli <f.fainelli@gmail.com>
    Tested-by: Guenter Roeck <linux@roeck-us.net>
    Tested-by: Linux Kernel Functional Testing <lkft@linaro.org>
    Signed-off-by: Greg Kroah-Hartman <gregkh@linuxfoundation.org>

commit e53914e7979ee7bd0a2b5af8f3eaa7291087f307
Author: Muchun Song <songmuchun@bytedance.com>
Date:   Tue Mar 22 14:42:08 2022 -0700

    mm: userfaultfd: fix missing cache flush in mcopy_atomic_pte() and __mcopy_atomic()
    
    commit 7c25a0b89a487878b0691e6524fb5a8827322194 upstream.
    
    userfaultfd calls mcopy_atomic_pte() and __mcopy_atomic() which do not
    do any cache flushing for the target page.  Then the target page will be
    mapped to the user space with a different address (user address), which
    might have an alias issue with the kernel address used to copy the data
    from the user to.  Fix this by insert flush_dcache_page() after
    copy_from_user() succeeds.
    
    Link: https://lkml.kernel.org/r/20220210123058.79206-7-songmuchun@bytedance.com
    Fixes: b6ebaedb4cb1 ("userfaultfd: avoid mmap_sem read recursion in mcopy_atomic")
    Fixes: c1a4de99fada ("userfaultfd: mcopy_atomic|mfill_zeropage: UFFDIO_COPY|UFFDIO_ZEROPAGE preparation")
    Signed-off-by: Muchun Song <songmuchun@bytedance.com>
    Cc: Axel Rasmussen <axelrasmussen@google.com>
    Cc: David Rientjes <rientjes@google.com>
    Cc: Fam Zheng <fam.zheng@bytedance.com>
    Cc: Kirill A. Shutemov <kirill.shutemov@linux.intel.com>
    Cc: Lars Persson <lars.persson@axis.com>
    Cc: Mike Kravetz <mike.kravetz@oracle.com>
    Cc: Peter Xu <peterx@redhat.com>
    Cc: Xiongchun Duan <duanxiongchun@bytedance.com>
    Cc: Zi Yan <ziy@nvidia.com>
    Signed-off-by: Andrew Morton <akpm@linux-foundation.org>
    Signed-off-by: Linus Torvalds <torvalds@linux-foundation.org>
    Signed-off-by: Greg Kroah-Hartman <gregkh@linuxfoundation.org>

commit fb75353fc4d687936e12fd6c8fce26db708afc86
Author: Ricky WU <ricky_wu@realtek.com>
Date:   Wed Mar 2 09:43:01 2022 +0000

    mmc: rtsx: add 74 Clocks in power on flow
    
    commit 1f311c94aabdb419c28e3147bcc8ab89269f1a7e upstream.
    
    SD spec definition:
    "Host provides at least 74 Clocks before issuing first command"
    After 1ms for the voltage stable then start issuing the Clock signals
    
    if POWER STATE is
    MMC_POWER_OFF to MMC_POWER_UP to issue Clock signal to card
    MMC_POWER_UP to MMC_POWER_ON to stop issuing signal to card
    
    Signed-off-by: Ricky Wu <ricky_wu@realtek.com>
    Link: https://lore.kernel.org/r/1badf10aba764191a1a752edcbf90389@realtek.com
    Signed-off-by: Ulf Hansson <ulf.hansson@linaro.org>
    Signed-off-by: Ricky Wu <ricky_wu@realtek.com>
    Signed-off-by: Ulf Hansson <ulf.hansson@linaro.org>
    Signed-off-by: Christian Loehle <cloehle@hyperstone.com>
    Signed-off-by: Greg Kroah-Hartman <gregkh@linuxfoundation.org>

commit b104109c9fdf750710a09bbffccb52d38e5c9336
Author: Itay Iellin <ieitayie@gmail.com>
Date:   Sat May 7 08:32:48 2022 -0400

    Bluetooth: Fix the creation of hdev->name
    
    commit 103a2f3255a95991252f8f13375c3a96a75011cd upstream.
    
    Set a size limit of 8 bytes of the written buffer to "hdev->name"
    including the terminating null byte, as the size of "hdev->name" is 8
    bytes. If an id value which is greater than 9999 is allocated,
    then the "snprintf(hdev->name, sizeof(hdev->name), "hci%d", id)"
    function call would lead to a truncation of the id value in decimal
    notation.
    
    Set an explicit maximum id parameter in the id allocation function call.
    The id allocation function defines the maximum allocated id value as the
    maximum id parameter value minus one. Therefore, HCI_MAX_ID is defined
    as 10000.
    
    Signed-off-by: Itay Iellin <ieitayie@gmail.com>
    Signed-off-by: Luiz Augusto von Dentz <luiz.von.dentz@intel.com>
    Signed-off-by: Greg Kroah-Hartman <gregkh@linuxfoundation.org>

commit 208db8850715766b675ce9264ab3b5919ddfbbb3
Author: Andreas Larsson <andreas@gaisler.com>
Date:   Fri Apr 29 10:46:56 2022 +0200

    can: grcan: only use the NAPI poll budget for RX
    
    commit 2873d4d52f7c52d60b316ba6c47bd7122b5a9861 upstream.
    
    The previous split budget between TX and RX made it return not using
    the entire budget but at the same time not having calling called
    napi_complete. This sometimes led to the poll to not be called, and at
    the same time having TX and RX interrupts disabled resulting in the
    driver getting stuck.
    
    Fixes: 6cec9b07fe6a ("can: grcan: Add device driver for GRCAN and GRHCAN cores")
    Link: https://lore.kernel.org/all/20220429084656.29788-4-andreas@gaisler.com
    Cc: stable@vger.kernel.org
    Signed-off-by: Andreas Larsson <andreas@gaisler.com>
    Signed-off-by: Marc Kleine-Budde <mkl@pengutronix.de>
    Signed-off-by: Greg Kroah-Hartman <gregkh@linuxfoundation.org>

commit 3b67fa996ef21b3232b0e95d0bcab2b43d6e83cb
Author: Andreas Larsson <andreas@gaisler.com>
Date:   Fri Apr 29 10:46:55 2022 +0200

    can: grcan: grcan_probe(): fix broken system id check for errata workaround needs
    
    commit 1e93ed26acf03fe6c97c6d573a10178596aadd43 upstream.
    
    The systemid property was checked for in the wrong place of the device
    tree and compared to the wrong value.
    
    Fixes: 6cec9b07fe6a ("can: grcan: Add device driver for GRCAN and GRHCAN cores")
    Link: https://lore.kernel.org/all/20220429084656.29788-3-andreas@gaisler.com
    Cc: stable@vger.kernel.org
    Signed-off-by: Andreas Larsson <andreas@gaisler.com>
    Signed-off-by: Marc Kleine-Budde <mkl@pengutronix.de>
    Signed-off-by: Greg Kroah-Hartman <gregkh@linuxfoundation.org>

commit 8532c1d872c1f39edfe7a46a12d0b0511e4c7ed4
Author: Lee Jones <lee.jones@linaro.org>
Date:   Fri Mar 12 10:55:26 2021 +0000

    block: drbd: drbd_nl: Make conversion to 'enum drbd_ret_code' explicit
    
    commit 1f1e87b4dc4598eac57a69868534b92d65e47e82 upstream.
    
    Fixes the following W=1 kernel build warning(s):
    
     from drivers/block/drbd/drbd_nl.c:24:
     drivers/block/drbd/drbd_nl.c: In function ‘drbd_adm_set_role’:
     drivers/block/drbd/drbd_nl.c:793:11: warning: implicit conversion from ‘enum drbd_state_rv’ to ‘enum drbd_ret_code’ [-Wenum-conversion]
     drivers/block/drbd/drbd_nl.c:795:11: warning: implicit conversion from ‘enum drbd_state_rv’ to ‘enum drbd_ret_code’ [-Wenum-conversion]
     drivers/block/drbd/drbd_nl.c: In function ‘drbd_adm_attach’:
     drivers/block/drbd/drbd_nl.c:1965:10: warning: implicit conversion from ‘enum drbd_state_rv’ to ‘enum drbd_ret_code’ [-Wenum-conversion]
     drivers/block/drbd/drbd_nl.c: In function ‘drbd_adm_connect’:
     drivers/block/drbd/drbd_nl.c:2690:10: warning: implicit conversion from ‘enum drbd_state_rv’ to ‘enum drbd_ret_code’ [-Wenum-conversion]
     drivers/block/drbd/drbd_nl.c: In function ‘drbd_adm_disconnect’:
     drivers/block/drbd/drbd_nl.c:2803:11: warning: implicit conversion from ‘enum drbd_state_rv’ to ‘enum drbd_ret_code’ [-Wenum-conversion]
    
    Cc: Philipp Reisner <philipp.reisner@linbit.com>
    Cc: Lars Ellenberg <lars.ellenberg@linbit.com>
    Cc: Jens Axboe <axboe@kernel.dk>
    Cc: drbd-dev@lists.linbit.com
    Cc: linux-block@vger.kernel.org
    Signed-off-by: Lee Jones <lee.jones@linaro.org>
    Link: https://lore.kernel.org/r/20210312105530.2219008-8-lee.jones@linaro.org
    Signed-off-by: Jens Axboe <axboe@kernel.dk>
    Cc: Nathan Chancellor <nathan@kernel.org>
    Signed-off-by: Greg Kroah-Hartman <gregkh@linuxfoundation.org>

commit 40992017f28a85b9a91adf5160de6fb9323cfa0d
Author: Nathan Chancellor <nathan@kernel.org>
Date:   Tue Jan 5 13:18:27 2021 -0700

    MIPS: Use address-of operator on section symbols
    
    commit d422c6c0644bccbb1ebeefffa51f35cec3019517 upstream.
    
    When building xway_defconfig with clang:
    
    arch/mips/lantiq/prom.c:82:23: error: array comparison always evaluates
    to true [-Werror,-Wtautological-compare]
            else if (__dtb_start != __dtb_end)
                                 ^
    1 error generated.
    
    These are not true arrays, they are linker defined symbols, which are
    just addresses. Using the address of operator silences the warning
    and does not change the resulting assembly with either clang/ld.lld
    or gcc/ld (tested with diff + objdump -Dr). Do the same thing across
    the entire MIPS subsystem to ensure there are no more warnings around
    this type of comparison.
    
    Link: https://github.com/ClangBuiltLinux/linux/issues/1232
    Signed-off-by: Nathan Chancellor <natechancellor@gmail.com>
    Acked-by: Florian Fainelli <f.fainelli@gmail.com>
    Signed-off-by: Thomas Bogendoerfer <tsbogend@alpha.franken.de>
    Cc: Sudip Mukherjee <sudipm.mukherjee@gmail.com>
    Signed-off-by: Greg Kroah-Hartman <gregkh@linuxfoundation.org>
